--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "dev:master": "nodemon app.js --master",
     "dev:node": "node app.js --node",
     "dev:ip": "node app.js --ip",
+    "dev:backend": "nodemon app.js --backend",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "mongoose": "^8.16.0",
     "ws": "^8.18.2"
   }
 }
