--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.5.0",
+    "express-xss-sanitizer": "^2.0.0",
     "mongoose": "^8.16.0",
     "ws": "^8.18.2"
   }
