--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "dev:node": "node app.js --node",
     "dev:ip": "node app.js --ip",
     "dev:backend": "nodemon app.js --backend",
+    "dev:web": "nodemon app.js --web",
+    "dev:help": "node app.js --help",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
