--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.5.0",
     "express-xss-sanitizer": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
     "ws": "^8.18.2"
   }
